[package]
name = "affiliate-swap"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
authors = ["Affiliate Swap Authors <dev@osmosis.zone>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
imported = []

[package.metadata.scripts]
optimize = """docker run --rm -v \"$(pwd)\":/code \
  --mount type=volume,source=\"$(basename \"$(pwd)\")_cache\",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.16.0
"""
optimize-m1 = """docker run --rm -v \"$(pwd)\":/code \
  --mount type=volume,source=\"$(basename \"$(pwd)\")_cache\",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.16.0
"""

[[bin]]
name = "build-schema"
path = "build-schema/schema.rs"

[dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
schemars = "0.8"
osmosis-std = "0.22"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
cw-utils = "1.0"

[dev-dependencies]
osmosis-test-tube = "22"
prost = "0.12"

